# mongoose_cmake1

./: LICENSE  README.md  build.sh
src/: CMakeLists.txt  main.c
